Another test version

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
   <!-- Navbar "example" -->
+<title>HTML Portfolio</title>
+</head>
+<body>
   <nav class="navbar navbar-default">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -30,8 +33,10 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
-<!-- Sample Carousel--><div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
+<!-- Sample Carousel-->
+<div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+
+<!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
     <li data-target="#portfolio-carousel" data-slide-to="1"></li>
@@ -42,7 +47,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Why I Do This</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>It's like art. I just have to do it. I can't help it.</p>
         </div>
       </div>
     </div>
@@ -50,7 +55,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>What I've Done</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>I've done websites for Alliance Car Sales, A+ Driving School, Randy and his wife (fill in later).<!--I'm always learning. Since graduating from high school I've actively sought out new experiences and ways of learning. These have ranged from books on tape for long drives across the country to kayak the Grand Canyon or the Gauley River to online code schools and PHP, Python, Django, or Angular Meetups.--></p>
         </div>
       </div>
     </div>
@@ -58,7 +63,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>What I'm Doing</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>I'm seeking out new things to learn. </p>
         </div>
       </div>
     </div>
@@ -77,16 +82,48 @@
 <div class="marketing">
   <div class="container">
     <div class="row">
+    <div class="col-sm-4 col-md-4">
+      <span class="glyphicon glyphicon-fire"></span>
+      <h2>HTML &amp; CSS</h2>
+      <p>I enjoy solving marketing challenges</p>
+    </div>
+    <div class="col-sm-4 col-md-4">
+      <span class="glyphicon glyphicon-globe"></span>      
+      <h2>Javascript</h2>
+      <p>I enjoy solving marketing challenges</p>
+    </div>
+    <div class="col-sm-4 col-md-4">
+      <span class="glyphicon glyphicon-tree-deciduous"></span>
+      <h2>Whitewater Kayaking</h2>
+      <p>I enjoy challenging myself to do more</p>
+      </div>
+    </div>
+  </div>
+</div>
 
+
+
+
+
+
+<div class="footer">
+  <div class="container">
+    <h3>Contact Me</h3>
+    <p>email or text</p>
+
+  </div>
+</div>
     <!-- End Grid System -->
-  <title>HTML Portfolio</title>
-</head>
-<body>
+  
+
+
+
+  
 
   <!--
     Previous project placeholder begins
   -->
-  <div class="header">
+  <!--<div class="header">
     <h1>Morgan McCircuit</h1>
     <h2>I write code</h2>
   </div>
@@ -110,7 +147,7 @@
   <div class="contact">
     <h3>Get in touch</h3>
     <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
+  </div> -->
   <!--
     Previous project placeholder ends
     (unused pieces will be deleted at the last task)
